--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-.DS_Stor
-ITESCIA.jare
+.DS_Store
+ITESCIA.jar
